Add more quirks!

--- a/app/markdown/2023-08-03/pep-440.md
+++ b/app/markdown/2023-08-03/pep-440.md
@@ -10,13 +10,20 @@ Below is a list of quirks in Python package versioning you may not know about:
 * [v Prefixes](#v-prefixes)
 * [Epoch versions](#epoch-versions)
 * [Local versions](#local-versions)
+* [Looooong versions](#looooong-versions)
 * [Case-insensitivity](#case-insensitivity)
 * [Pre-post-dev releases](#pre-post-dev-releases)
 * [No delimiters needed](#no-delimiters-needed)
 * [Delimiter normalization](#delimiter-normalization)
 * [Implicit post releases](#implicit-post-releases)
 * [Implicit zeroes](#implicit-zeroes)
+* [Zero-prefixed numerical normalization](#zero-prefixed-numerical-normalization)
 * [Wheel build numbers](#wheel-build-numbers)
+
+This article should serve as a list of reasons to not handle Python versions as simple strings due to their complexity. Instead use
+the [official `packaging.version.Version` class](https://packaging.pypa.io/en/latest/version.html) to parse, compare, and reason about Python versions.
+
+This <a href="https://xkcd.com/356/"><strike>nerdsnipe</strike></a> blog post idea was given to me by <a href="https://yossarian.net">William Woodruff</a> at PyCon US 2023. Thanks Will!
 
 ## What is a Python package version?
 
@@ -80,6 +87,11 @@ ERROR    HTTPError: 400 Bad Request from https://upload.pypi.org/legacy/
 This behavior is called out explicitly in the PEP:
 
 > As the Python Package Index is intended solely for indexing and hosting upstream projects, it MUST NOT allow the use of local version identifiers.
+
+## Looooong versions
+
+PEP 440 doesn't define a maximum length for a version number, meaning that they can be infinitely long according to the standard.
+There's a package that uses the [first 217 digits of pi](https://gist.github.com/di/b7ed90e661b7820aa51613034bb25ab7#file-gistfile1-txt-L228) as its version number.
 
 ## Case-insensitivity
 
@@ -169,6 +181,13 @@ integer without error:
 __version__ = "01.001.0000"  # Normalizes to '1.1.0'
 ```
 
+## Ambiguous parsing of pre-PEP 440 source distribution versions
+
+PEP 440 only came into effect in 2014, there was a lot of Python happening before that!
+Retroactive application of PEP 440 rules for versions can cause some ambiguous parsing situations for source distributions.
+
+William Woodruff [wrote an awesome article describing this issue](https://blog.yossarian.net/2022/05/09/A-most-vexing-parse-but-for-Python-packaging#python-packaging-a-primer).
+
 ## Wheel build numbers
 
 ✨ **Bonus quirk!** ✨ Wheel build numbers are a feature that's very similar to a version number and are only applicable to wheel distributions.
@@ -194,105 +213,3 @@ Combining this quirk with the one above means that with a dist name of `0` you c
 | +- version 
 +- name
 ```
-
-This <a href="https://xkcd.com/356/"><strike>nerdsnipe</strike></a> blog post idea was given to me by <a href="https://yossarian.net">William Woodruff</a> at PyCon US 2023. Thanks Will!
-
-<script>
-function randInt(min, max) {
-  min = Math.ceil(min);
-  max = Math.floor(max);
-  return Math.floor(Math.random() * (max - min) + min);
-}
-
-function randString(characters, length) {
-  var result = '';
-  const charactersLength = characters.length;
-  let counter = 0;
-  while (counter < length) {
-    result += characters.charAt(randInt(0, charactersLength));
-    counter += 1;
-  }
-  return result;
-}
-
-function chooseString(strings) {
-  var choice = strings[randInt(0, strings.length)];
-  return choice.toLowerCase().split('').map(function(c){
-    return Math.random() < .5? c : c.toUpperCase();
-  }).join('');
-}
-
-function genVersion() {
-  var buffer = '';
-  // v prefix
-  if (randInt(0, 2) === 1) {
-    buffer += randString('vV', 1);
-  }
-  // Epoch version
-  if (randInt(0, 2) === 1) {
-    buffer += randString('0123456789', randInt(1, 3));
-    buffer += '!';
-  }
-  // Release version
-  var parts = randInt(1, 4);
-  for (var i = 0; i < parts; i++) {
-    if (i !== 0) {
-      buffer += '.';
-    }
-    buffer += randString('0123456789', randInt(1, 3));
-  }
-  // Pre-version
-  if (randInt(0, 2) === 1) {
-    buffer += chooseString(['', '_', '.', '-']);
-    buffer += chooseString(['a', 'b', 'c', 'rc', 'pre', 'preview']);
-    if (randInt(0, 2) === 1) {
-      buffer += chooseString(['', '_', '.', '-']);
-      buffer += randString('0123456789', randInt(1, 3));
-    }  
-  }
-  // Post-version
-  var postRelease = randInt(0, 3);
-  if (postRelease === 1) {
-    buffer += '-';
-    buffer += randString('0123456789', randInt(1, 3));
-  } else if (postRelease === 2) {
-    buffer += chooseString(['', '_', '.', '-']);
-    buffer += chooseString(['r', 'rev', 'post']);
-    if (randInt(0, 2) === 1) {
-      buffer += chooseString(['', '_', '.', '-']);
-      buffer += randString('0123456789', randInt(1, 3));
-    }
-  }
-  // Dev version
-  if (randInt(0, 2) === 1) {
-    buffer += chooseString(['', '_', '.', '-']);
-    buffer += chooseString(['dev']);
-    buffer += chooseString(['', '_', '.', '-']);
-    buffer += randString('0123456789', randInt(1, 3));
-  }
-  // Local version
-  if (randInt(0, 2) === 1) {
-    buffer += '+';
-    buffer += randString('0123456789abcefghijklmnopqrstuvwxyz', randInt(1, 3));
-    var localParts = randInt(1, 2);
-    for (var i = 0; i < localParts; i++) {
-      if (i !== 0) {
-        buffer += chooseString(['', '_', '.', '-']);
-      }
-      buffer += randString('0123456789abcefghijklmnopqrstuvwxyz', randInt(1, 3));
-    } 
-  }
-
-  return buffer;
-}
-
-function genAllVersions () {
-  var inputs = document.getElementsByClassName("version");
-  for(var i = 0; i < inputs.length; i++) {
-    inputs[i].innerHTML = genVersion();
-  }
-};
-
-genAllVersions();
-
-</script>
