Add an example of an epoch version

--- a/app/markdown/2023-08-03/pep-440.md
+++ b/app/markdown/2023-08-03/pep-440.md
@@ -58,6 +58,21 @@ From [PEP 440](https://peps.python.org/pep-0440/#adding-version-epochs):
 
 > In particular, supporting version epochs allows a project that was previously using date based versioning to switch to semantic versioning by specifying a new version epoch.
 
+Here's an example of that in action, say a project used CalVer but wanted to switch to SemVer, this is what their version scheme might look like:
+
+```python
+# CalVer...
+"2023.7.23"
+"2023.8.4"
+
+# Switch to SemVer!
+"1!2.0.0"
+"1!2.1.0"
+"1!2.1.1"
+
+# and so on...
+```
+
 ## Local versions
 
 Local versions are an arbitrary identifier consisting of alphanumerics and a period and come after the "release".
@@ -164,6 +179,19 @@ This also means you can add a ton of zeroes after a version and pip handles it t
 ```shell
 # Add a bunch of zeroes after the requested version...
 $ python -m pip install urllib3==2.0.4.0.0.0.0.0.0
+
+# ...resolves to '2.0.4':
+  Downloading urllib3-2.0.4-py3-none-any.whl (123 kB)
+     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 123.9/123.9 kB 1.4 MB/s eta 0:00:00
+Installing collected packages: urllib3
+Successfully installed urllib3-2.0.4
+```
+
+This also applies to epoch versions! Every version has a default epoch version of `0`:
+
+```shell
+# Add a leading 0 epoch version.
+$ python -m pip install 'urllib3==0!2.0.4'
 
 # ...resolves to '2.0.4':
   Downloading urllib3-2.0.4-py3-none-any.whl (123 kB)
